Day 10 Part 2 WIP for dinner